--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,6 +10,7 @@ bannerImage:
     src: /img/surface-accessories.png
     alt: Dummy image
 ---
+import RecentlyUpdated from '@components/RecentlyUpdated.astro';
 
 Welcome to Astro Accelerator. A super-lightweight, accessible, SEO friendly starter project for [Astro](https://astro.build/).
 
@@ -36,3 +37,7 @@ Out of the box, Astro Accelerator is a "top scores" high-performance website in 
 :::
 
 Test scores aren't everything, but Astro Accelerator is light and fast.
+
+## Recent changes
+
+<RecentlyUpdated count="5" />
