--- a/src/pages/features/mdx-files.mdx
+++ b/src/pages/features/mdx-files.mdx
@@ -21,13 +21,13 @@ The text below is an example of MDX variables:
 
 {example}
 
-You can use varaibles using `{variableName}` syntax.
+You can use variables using `{variableName}` syntax.
 
 ## Adding MDX to Astro
 
 Install the extension:
 
-```
+```bash
 npm install @astrojs/mdx
 ```
 
