--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -29,7 +29,7 @@ Astro Accelerator is built on some strong opinions:
 >
 > It's clean semantic HTML, simple CSS, and some minor non-essential enhancements in plain JavaScript. <cite>Steve Fenton</cite>
 
-Out of the box, Astro Accelerator is a "top scores" high-performance website in the lab. [Pagespeed Insights](https://developers.google.com/speed/docs/insights/v5/about?hl=en-US) tests website performance on mobile and desktop across a number of measurements.
+Out of the box, Astro Accelerator is a "top scores" high-performance website in the lab. [Page speed insights](https://developers.google.com/speed/docs/insights/v5/about?hl=en-US) tests website performance on mobile and desktop across a number of measurements.
 
 :::figure
 :img{ src="/img/astro-lighthouse.png" alt="Astro Lighthouse Score (100% in all categories)" loading="lazy" }
