Let utils set the titles, rather than the component.
Prettier's obsession with moving closing </a> tags to a new line just got it terminated.

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -2,6 +2,7 @@
 title: Welcome to Astro *Accelerator*
 subtitle: A *super-lightweight*, accessible, SEO-friendly starter project for Astro
 navTitle: Home
+crumbTitle: Accelerator
 navOrder: 0
 pubDate:  2022-09-17
 keywords: astro,accelerator,site generator
