Optional end date

--- a/src/pages/kitchen-sink.mdx
+++ b/src/pages/kitchen-sink.mdx
@@ -400,6 +400,14 @@ line breaks.
 />
 
 <TimelineEvent
+  date="2026-02-10"
+  endDate="2026-02-12"
+  title="Astro Accelerator Training"
+  location="Remote"
+  description="Three-day intensive training on Astro Accelerator, including advanced component development and theme customization."
+/>
+
+<TimelineEvent
   date="2150-02-20"
   title="DevOps Workshop"
   location="Austin, TX"
