Promote description to content slot with backwards compatibility.

--- a/src/pages/kitchen-sink.mdx
+++ b/src/pages/kitchen-sink.mdx
@@ -22,34 +22,38 @@ This page contains the most common content components.
   date="2025-01-15"
   title="Platform Engineering Summit"
   location="San Francisco, CA"
-  description="Join industry leaders for a day of insights on platform engineering, developer experience, and organizational transformation."
   linkHref="#"
   linkText="Register Now"
-/>
+>
+Join industry leaders for a day of insights on platform engineering, developer experience, and organizational transformation.
+</TimelineEvent>
 
 <TimelineEvent
-  date="2026-01-29"
+  date="2026-02-03"
   title="DevOps Workshop"
   location="Austin, TX"
-  description="Hands-on workshop covering GitOps, CI/CD best practices, and deployment automation strategies."
   linkHref="#"
   linkText="Register Now"
-/>
+>
+Hands-on workshop covering GitOps, CI/CD best practices, and deployment automation strategies.
+</TimelineEvent>
 
 <TimelineEvent
   date="2026-02-10"
   endDate="2026-02-12"
   title="Astro Accelerator Training"
   location="Remote"
-  description="Three-day intensive training on Astro Accelerator, including advanced component development and theme customization."
-/>
+>
+Three-day intensive training on Astro Accelerator, including advanced component development and theme customization.
+</TimelineEvent>
 
 <TimelineEvent
   date="2150-02-20"
   title="DevOps Workshop"
   location="Austin, TX"
-  description="Hands-on workshop covering GitOps, CI/CD best practices, and deployment automation strategies."
-/>
+>
+Hands-on workshop covering GitOps, CI/CD best practices, and deployment automation strategies.
+</TimelineEvent>
 
 </div>
 
