Update build file

--- a/src/pages/events-archive.mdx
+++ b/src/pages/events-archive.mdx
@@ -4,6 +4,7 @@ navOrder: 200002
 pubDate: 2026-02-13
 keywords: events, archive, timeline
 description: Past events and workshops.
+navMenu: false
 ---
 
 import { getCollection, render } from 'astro:content';
